--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 # Backend Environment Variables
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/sags
+# MONGO_URI=mongodb://localhost:27017/sags
+MONGO_URI=mongodb+srv://vidhi:vidhi@12345@cluster0.5zgd6od.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 ML_SERVICE_URL=http://localhost:8000
 
