--- a/backend/config.env
+++ b/backend/config.env
@@ -2,4 +2,4 @@ PORT=5000
 MONGO_URI=mongodb://localhost:27017/sags
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 ML_SERVICE_URL=http://localhost:8000
-NODE_ENV=development
+NODE_ENV=production
